Fix Dark Mode

--- a/style.css
+++ b/style.css
@@ -57,8 +57,8 @@ body {
 }
 
 .dark-mode {
-    --color-light: var(--color-black);
-    --color-dark: var(--color-white);
+    --color-text: var(--color-light);
+    --color-background: var(--color-dark);
 }
 
 input,
